<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Leave(BDO)</string>
    <string name="action_settings">Action Setting</string>
    <string name="already_registered">Already Registered</string>
    <string name="back_to_login">Back to Login</string>
    <string name="balance_card">Balance Card</string>
    <string name="change_password">Change Password</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="fullname">Fullname</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="my_leave">My Leave</string>
    <string-array name="navItems">
        <item>My Leave</item>
        <item>My Balance Card</item>
        <item>To be Approval</item>
    </string-array>
    <string name="nik">NIK</string>
    <string name="not_member">Not a member?</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="to_be_approval">To be approval</string>
    <string name="welcome">Welcome</string>
</resources>
