<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:background="@color/bg_login">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/nik"
            android:layout_marginBottom="10dp"
            android:hint="@string/nik"
            android:inputType="text|number"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password"
            android:padding="15dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/password"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="20dp"
            android:background="@color/btn_login_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>